Fixes image-picker overflow

--- a/webofneeds/won-owner-webapp/src/main/webapp/style/_imagepicker.scss
+++ b/webofneeds/won-owner-webapp/src/main/webapp/style/_imagepicker.scss
@@ -65,6 +65,7 @@ won-image-picker {
         grid-row: 2 / span 1;
         grid-column: 1 / span 2;
         object-fit: contain;
+        max-height: 5rem;
         width: 100%;
         height: 100%;
         background: white;
